# Market_Researcher_Crewai

./: .gitignore  README.md  pyproject.toml
src/market_researcher_crew/: crew.py  main.py
src/market_researcher_crew/config/: agents.yaml  tasks.yaml
src/market_researcher_crew/tools/: custom_tool.py
